# backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  foo.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 132c7c86d1f5_character_limit_increased_for_some_.py  13b00503605a_cascade_delete_added_for_store_address.py  1aa38dfd1c95_initial_migration.py  2038a29f9e1c_add_new_column.py  62f1a8ae9eb9_verificationstatus_added_on_user.py  7053588ec912_cnpj_switched_to_a_non_unique_field.py  727b3bc91d32_initial_migration.py  bd72317e7e24_new_user_access_types_added.py  d7e1e13e6f17_opening_date_size_legal_nature_cnae_.py  e2e4c52db824_minimum_count_added_to_demand.py  e30ed9845615_upgrading_field_with_20_chars_to_32.py  fe5540df529e_consumer_and_producer_added_on_the_user_.py
api/: api_config.py  api_router_builder.py
api/clients/: GoogleBucketsClient.py  correios_client.py  google_buckets_client.py  open_street_map_client.py  receita_client.py
api/controllers/: address_controller.py  auth_controller.py  auth_wrapper.py  base_controller.py  demand_controller.py  product_controller.py  reel_controller.py  store_controller.py  user_controller.py
api/domain/: address.py  base_entity.py  certification.py  demand.py  group.py  product.py  product_name.py  store.py  user.py
api/enums/: address_type.py  bucket_name.py  demand_status.py  gender_type.py  log_type.py  offer_status.py  offer_type.py  product_type.py  sale_dispute_status.py  sale_status.py  store_status.py  store_type.py  unit_type.py  user_access.py  user_type.py  (+1 more)
(+97 files in other folders)
